upload docs to aws and show docs

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# VITE_APP_ACCESS_KEY = AKIAS3BFUPSX6FUZH7WU
-# VITE_APP_SECRET_KEY = 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
+VITE_APP_ACCESS_KEY = AKIAS3BFUPSX6FUZH7WU
+VITE_APP_SECRET_KEY = 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
