pushing minor changes

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
+# AWS S3 credentials
+# These credentials are used to access the AWS S3 bucket for file uploads
 VITE_APP_ACCESS_KEY = AKIAS3BFUPSX6FUZH7WU
 VITE_APP_SECRET_KEY = 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
